--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -36,7 +36,7 @@
       {% for entry in craft.entries.section('offices').all() %}
         <li class="row-block   separate">
 
-          <article class="module contact-module pad vcard image-wrap">
+          <article class="module contact-module pad vcard image-wrap location-contact">
 
             {% set image = entry.officeImage.one() %}
             <div class="image" {% if image %}style="background-image: url('{{ image.getUrl('thumb') }}');"{% endif %}></div>
@@ -79,12 +79,10 @@
       {% for block in entry.contactBlocks.all() %}
         <li class="row-block   separate">
 
-          <article class="module contact-module pad vcard image-wrap">
-
-            <div class="image"></div>
+          <article class="module contact-module pad vcard general-contact">
 
             <div class="content">
-              <h1 class="font-p"><a href="{{ entry.url }}" class="fn org url"><span class="organization-name sr-only">AEI</span><span class="organization-unit">{{ block.contactTitle }}</span></a></h1>
+              <h1 class="font-p"><span class="fn org url"><span class="organization-name sr-only">AEI</span><span class="organization-unit">{{ block.contactTitle }}</span></spam></h1>
               <div class="font-details">
                 {% if block.phoneNumber %}
                   <div class="tel"><a href="tel:{{ block.phoneNumber }}">{{ block.phoneNumber }}</a></div>
