--- a/templates/expertise/index.html
+++ b/templates/expertise/index.html
@@ -10,7 +10,7 @@
     'markets',
     'projectImage'
     ]
-  }).limit(20) as paginationInfo, projectEntries %}
+  }).order('featured desc, postDate desc').limit(20) as paginationInfo, projectEntries %}
 
   {% set title = category.title %}
   {% set subheader = category.description %}
@@ -36,7 +36,7 @@
       'markets',
       'projectImage'
     ]
-  }).limit(20) as paginationInfo, projectEntries %}
+  }).order('featured desc, postDate desc').limit(20) as paginationInfo, projectEntries %}
 
   {% set title = entry.title %}
   {% set subheader = entry.description %}
