Fix broken stat module on people page (due to var name change within _stat partial)

--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -61,10 +61,10 @@
     </div>
     <div class="row-block pull-to-top">
       {% set block = {
-        figure: entry.numberOfPeople,
-        label: 'People',
-        figure2: entry.numberOfOffices,
-        label2: 'Offices',
+        statFigure: entry.numberOfPeople,
+        statLabel: 'People',
+        statFigure2: entry.numberOfOffices,
+        statLabel2: 'Offices',
       } %}
       {% include 'partials/media-blocks/_stat' %}
     </div>
