update craft and plugins; add AEI plugin with customized Color Swatches field; add js to identify closest matching color for project image when selecting new image; remove colour swatches plugin and unused modules; migrate deltek plugin service to new AEI plugin; add aei_deltek_log table for import logs; start of plugin homepage and widget to show import log + manually run importer

--- a/templates/partials/_related-impact.html
+++ b/templates/partials/_related-impact.html
@@ -8,8 +8,8 @@
       </div>
     </div>
     <ul class="row -halves -separators semantic-only-list hr-top-off-white hr-bottom-off-white">
-      {% for post in relatedPosts %}
-        <li class="row-block   separate">
+      {% for post in relatedPosts.all() %}
+        <li class="row-block separate">
           {% include 'impact/_article' %}
         </li>
       {% endfor %}
