avoid error in calling .all() twice

--- a/templates/partials/_related-impact.html
+++ b/templates/partials/_related-impact.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <ul class="row -halves -separators semantic-only-list hr-top-off-white hr-bottom-off-white">
-      {% for post in relatedPosts.all() %}
+      {% for post in relatedPosts %}
         <li class="row-block separate">
           {% include 'impact/_article' %}
         </li>
