--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -7,6 +7,7 @@
   {% paginate craft.entries({
     section: 'people',
     relatedTo: category,
+    orderBy: 'personLastName',
     with: [
     'personImage'
     ]
@@ -20,6 +21,7 @@
 
   {% paginate craft.entries({
     section: 'people',
+    orderBy: 'personLastName',
     with: [
       'personImage'
     ]
