click me! -> view logs

--- a/plugins/aei/src/templates/index.twig
+++ b/plugins/aei/src/templates/index.twig
@@ -19,7 +19,7 @@
 {# Content that should appear in the page header#}
 {% block actionButton %}
     <div class="buttons">
-        <a href="{{ pluginCpUrl }}" class="btn submit add icon">{{ "Click Me!"|t('aei') }}</a>
+        <a href="{{ pluginCpUrl }}" class="btn submit">{{ "View Logs"|t('aei') }}</a>
     </div>
 {% endblock %}
 
