--- a/plugins/aei/src/templates/index.twig
+++ b/plugins/aei/src/templates/index.twig
@@ -29,9 +29,6 @@
     <p class="textline">This runs every night as an automated cronjob, but you can also run it manually here.</p>
     <form method="post" id="deltek-import-form" action="/admin/actions/aei/deltek-import/import-records">
         {{ csrfInput() }}
-        <div class="progress-bar"><div class="progress-done"></div></div>
-        <div class="log-output">{% if import_response is defined %}{{ import_response.log }}{% endif %}
-        </div>
         <ul>
             {% for section in ['Projects', 'People', 'Offices', 'Awards', 'Impact'] %}
                 <li>
@@ -44,6 +41,9 @@
                 </li>
             {% endfor %}
         </ul>
+        <div class="info-output hidden"><p><div id="graphic" class="spinner"></div> Importing... (be patient, can take a while)</p></div>
+        <div class="progressbar hidden"><div class="progressbar-inner"></div></div>
+        <div class="log-output hidden">{% if import_response is defined %}{{ import_response.log }}{% endif %}</div>
         <p class="submit"><input type="submit" class="btn submit" name="submit" value="Run Importer"></p>
     </form>
 {% endblock %}
