Fix nested padding of quote carousels on office/location page

--- a/web/assets/scss/helpers/_spacing.scss
+++ b/web/assets/scss/helpers/_spacing.scss
@@ -1,6 +1,13 @@
-// Padding
+//Padding
 .pad {
   padding: $padding;
+
+}
+
+.module {
+  .pad {
+    padding: 0;
+  }
 }
 
 .pad-vertical {
@@ -84,8 +91,8 @@
 }
 
 .absolute-center {
-  position: absolute;
   top: 50%;
   left: 50%;
+  position: absolute;
   transform: translate(-50%,-50%);
 }
