--- a/templates/offices/_entry.html
+++ b/templates/offices/_entry.html
@@ -12,7 +12,7 @@
   %}
 
     <div class="row -halves secondary-page-intro">
-      <div class="row-block top-overlap-p">
+      <div class="row-block {{ entry.quotes|length ? 'top-overlap-h1' : 'top-overlap-p' }}">
         <div class="page-intro module text-module background-white text-black">
           {% if entry.quotes|length %}
             {% set block = { 'quotes': entry.quotes } %}
