--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -1,5 +1,5 @@
 <header class="site-header row -halves" role="banner">
-  <div class="lockup-block row-block pad">
+  <div class="lockup-block row-block">
     <div class="lockup bigclicky">
       <div class="affiliated-engineers">
         <h1 class="sr-only"><a href="/">{{ siteName }}</a></h1>
@@ -12,12 +12,12 @@
       </ul>
     </div>
   </div>
-  <div class="search-block row-block pad">
+  <div class="search-block row-block">
     <div class="search-open">
       Search <svg class="icon-search"><use xlink:href="#icon-search" /></svg>
     </div>
   </div>
-  <ul class="secondary-links links-block row-block pad">
+  <ul class="secondary-links links-block row-block">
     <li class="secondary-links-item {{ active('/careers/', 'url', 'current') }}">
       <a href="/careers/">Careers</a>
     </li>
