Restore padding to text in photo-rows; rename checkerboard-header to theater-header; Refactor showing/hiding of play button in theater-header

--- a/web/assets/scss/components/_page-headers.scss
+++ b/web/assets/scss/components/_page-headers.scss
@@ -34,7 +34,7 @@
   }
 }
 
-.checkerboard-header {
+.theater-header {
   position: relative;
   overflow: hidden;
 
@@ -46,7 +46,12 @@
     .row:first-child {
       flex-grow: 1;
     }
+
+    .theater-hero .theater-play {
+      display: none;
+    }
   }
+
   @include media-lg {
     min-height: calc((66.67vw)*9/16);
   }
@@ -55,7 +60,14 @@
     z-index: 1;
   }
 
-  .checkerboard-hero {
+  .buttons .theater-play, .buttons.theater-play-button-only {
+    display: none;
+    @include media-md {
+      display: block;
+    }
+  }
+
+  .theater-hero {
     height: 0;
     position: relative;
     padding-bottom: 100% * 9/16; // aspect ratio block on mobile
@@ -66,24 +78,21 @@
     }
   }
 
-  &.theater-wrap {
+  .theater-cover-top, .theater-cover-bottom {
+    z-index: 1;
+    transition: transform 0.2s 0.4s $ease;
+  }
 
-    .theater-cover-top, .theater-cover-bottom {
-      z-index: 1;
-      transition: transform 0.2s 0.4s $ease;
-    }
-
-    &.-open {
-          @include media-md {
-        .theater-cover-top, .theater-cover-bottom {
-          transition: transform 0.2s $ease;
-        }
-        .theater-cover-top {
-          transform: translateY(-100%);
-        }
-        .theater-cover-bottom {
-          transform: translateY(100%);
-        }
+  &.-open {
+        @include media-md {
+      .theater-cover-top, .theater-cover-bottom {
+        transition: transform 0.2s $ease;
+      }
+      .theater-cover-top {
+        transform: translateY(-100%);
+      }
+      .theater-cover-bottom {
+        transform: translateY(100%);
       }
     }
   }
