--- a/web/assets/scss/components/_forms.scss
+++ b/web/assets/scss/components/_forms.scss
@@ -62,6 +62,7 @@
   text-align: left;
   position: relative;
   text-decoration: none;
+  display: inline-block;
   padding: 11px 7*$beat 11px 11px;
   @include outline-cornerize($black, $white);
 
